@@ -1,3 +1,9 @@
+2014-03-20  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/ecc-edwards.c (ed_add_25638): Fix for X == A.
+	(main): Compute pre-computed tables.
+	(precomputed_KG, precomputed_2E_KG): Add.
+
 2014-03-19  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/bn.c (bn256_add): Fix for X == B.
